[package]
name = "warp-docker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.0"
#/ this speeds up ci❗
libsql = { git = "https://github.com/tursodatabase/libsql", default-features = false, features = [
    "remote",
] }
# libsql = { git = "https://github.com/tursodatabase/libsql" }
tokio = { version = "1.35.1", features = ["full"] }
warp = "0.3.6"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = "0.11.23"
backon = "0.4.1"
anyhow = "1.0.79"
reqwest-retry = "0.3.0"
reqwest-middleware = "0.2.4"

#? for libsql::Database::open_remote_with_connector
#? @see https://github.com/tursodatabase/libsql/blob/main/libsql/examples/flutter.rs
# hyper-rustls = "0.24.2"

[features]
#? no features by default
default = []

#? Add feature "local" here, then you can use it.
#? Our "local" feature depends on nothing else.
local = []
